[package]
name = "rustle-core"
version = "0.1.0"
edition = "2021"
description = "Rust core for Rustle: librosa-compatible audio feature extraction."
license = "MIT"
publish = false            # internal crate — baked into the wheel, never published to crates.io

[lib]
name = "_rustlepy"         # compiled module imported as `rustlepy._rustlepy`
crate-type = ["cdylib"]

[dependencies]
# Versions verified on crates.io 2026-06-28. extension-module is enabled by
# maturin (see pyproject [tool.maturin]) so `cargo check` doesn't try to link libpython.
pyo3 = { version = "0.29", features = ["abi3-py310"] }
numpy = "0.29"
ndarray = "0.17"
